fix: route page/timetable tab no longer renders overlapping elements in iPhone

--- a/app/component/route.scss
+++ b/app/component/route.scss
@@ -705,6 +705,7 @@ $margin-left-right: 21.3px;
 .route-schedule-ranges {
   display: flex;
   justify-content: space-between;
+  min-height: 24px;
   margin-bottom: 12px;
   margin-top: 12px;
   flex-wrap: wrap;
